# plugin-base

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/ha/plugin_base/common/: audio_module_visitor.h  context.h  project_time_simulator.h
include/ha/plugin_base/core/: types.h
include/ha/plugin_base/vst3/component/: audio_processing.h  audio_setup.h
include/ha/plugin_base/vst3/controller/: generic_param.h
include/hao/plugin_base/common/: audio_module_visitor.h  context.h  project_time_simulator.h
include/hao/plugin_base/core/: types.h
include/hao/plugin_base/vst3/component/: audio_processing.h  audio_setup.h
include/hao/plugin_base/vst3/controller/: generic_param.h
source/common/: context.cpp  project_time_simulator.cpp  slicing.h
source/vst3/common/: param_id.cpp  param_id.h
source/vst3/component/: audio_processing.cpp  audio_setup.cpp
source/vst3/controller/: generic_param.cpp
test/: plugin-base_test.cpp
